--- a/packages/frontend/src/views/CalendarView/CalendarView.module.css
+++ b/packages/frontend/src/views/CalendarView/CalendarView.module.css
@@ -23,5 +23,5 @@
   display: flex;
   align-items: center;
   gap: 0.8em;
-  margin-bottom: 16px;
+  margin-bottom: -32px;
 }
